--- a/WebGL_BoxMoving/index.html
+++ b/WebGL_BoxMoving/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <meta name="google-site-verification" content="k8B2z8FL-sU0BZY8hI8QNM5kW_eiDMQ2VOlwnCqD2Ao">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="images/logo.png" type="image" sizes="16x16">
+    <link rel="stylesheet" href="Style/main.css">
+
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | 3DunityProgram</title>
@@ -13,6 +19,17 @@
     </script>
   </head>
   <body>
+    <header>
+      <nav>
+          <ul class="topnav">
+              <li class="logo"><a href="https://conghieuz.github.io/ConghieuZ/"></a></li>
+              <li><a href="https://conghieuz.github.io/ConghieuZ/">HOME</a></li>
+              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Games/Games.htm">GAMES</a></li>
+            
+              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Contact/Contact.htm">CONTACT</a></li>
+          </ul>
+      </nav>
+  </header>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
