--- a/WL_Game_Test _BakeFloar/index.html
+++ b/WL_Game_Test _BakeFloar/index.html
@@ -35,7 +35,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">attack on titan minecraft vs</div>
+        <div class="title">CongHieuZ</div>
       </div>
     </div>
   </body>
