--- a/Doge/index.html
+++ b/Doge/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test.loader.js";
+      var loaderUrl = buildUrl + "/Doge.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test.data.br",
-        frameworkUrl: buildUrl + "/test.framework.js.br",
-        codeUrl: buildUrl + "/test.wasm.br",
+        dataUrl: buildUrl + "/Doge.data.unityweb",
+        frameworkUrl: buildUrl + "/Doge.framework.js.unityweb",
+        codeUrl: buildUrl + "/Doge.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Conghieu",
         productName: "Doge",
