--- a/test switch scene/index.html
+++ b/test switch scene/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | New Unity Project 2</title>
+    <title>Unity WebGL Player | Switch scene</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">New Unity Project 2</div>
+        <div id="unity-build-title">Switch scene</div>
       </div>
     </div>
     <script>
@@ -33,8 +33,8 @@
         frameworkUrl: buildUrl + "/test switch scene.framework.js.br",
         codeUrl: buildUrl + "/test switch scene.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "New Unity Project 2",
+        companyName: "conghieu",
+        productName: "Switch scene",
         productVersion: "1.0",
       };
 
