--- a/scene/index.html
+++ b/scene/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test switch scene.loader.js";
+      var loaderUrl = buildUrl + "/scene.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test switch scene.data.br",
-        frameworkUrl: buildUrl + "/test switch scene.framework.js.br",
-        codeUrl: buildUrl + "/test switch scene.wasm.br",
+        dataUrl: buildUrl + "/scene.data.unityweb",
+        frameworkUrl: buildUrl + "/scene.framework.js.unityweb",
+        codeUrl: buildUrl + "/scene.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "conghieu",
         productName: "Switch scene v1.2",
