--- a/SusGame/index.html
+++ b/SusGame/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta name="google-site-verification" content="k8B2z8FL-sU0BZY8hI8QNM5kW_eiDMQ2VOlwnCqD2Ao">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="images/logo.png" type="image" sizes="16x16">
-    <link rel="stylesheet" href="Style/main.css">
+        <meta name="google-site-verification" content="k8B2z8FL-sU0BZY8hI8QNM5kW_eiDMQ2VOlwnCqD2Ao">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" href="images/logo.png" type="image" sizes="16x16">
+        <link rel="stylesheet" href="Style/main.css">
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,23 +16,15 @@
   <body>
     <header>
       <nav>
-          <ul class="topnav">
-              <li class="logo"><a href="https://conghieuz.github.io/ConghieuZ/"></a></li>
-              <li><a href="https://conghieuz.github.io/ConghieuZ/">HOME</a></li>
-              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Games/Games.htm">GAMES</a></li>
-            
-              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Contact/Contact.htm">CONTACT</a></li>
-          </ul>
+        <ul class="topnav">
+          <li class="logo"><a href="https://conghieuz.github.io/ConghieuZ/"></a></li>
+          <li><a href="https://conghieuz.github.io/ConghieuZ/">HOME</a></li>
+          <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Games/Games.htm">GAMES</a></li>
+    
+          <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Contact/Contact.htm">CONTACT</a></li>
+        </ul>
       </nav>
-  </header>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">3DunityProgram</div>
-      </div>
-    </div>
+    </header>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
@@ -81,11 +73,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webGL.loader.js";
+      var loaderUrl = buildUrl + "/SusGame.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webGL.data.br",
-        frameworkUrl: buildUrl + "/webGL.framework.js.br",
-        codeUrl: buildUrl + "/webGL.wasm.br",
+        dataUrl: buildUrl + "/SusGame.data.unityweb",
+        frameworkUrl: buildUrl + "/SusGame.framework.js.unityweb",
+        codeUrl: buildUrl + "/SusGame.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KongHieu",
         productName: "SquidGame",
