--- a/SusGame/index.html
+++ b/SusGame/index.html
@@ -17,10 +17,10 @@
     <header>
       <nav>
         <ul class="topnav">
-          <li class="logo"><a href="https://conghieuz.github.io/ConghieuZ/"></a></li>
-          <li><a href="https://conghieuz.github.io/ConghieuZ/">HOME</a></li>
-          <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Games/Games.htm">GAMES</a></li>
-          <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Contact/Contact.htm">CONTACT</a></li>
+          <li class="logo"><a href="https://..."></a></li>
+          <li><a href="https://...">HOME</a></li>
+          <li><a href="https://...">GAMES</a></li>
+          <li><a href="https://...">CONTACT</a></li>
         </ul>
       </nav>
     </header>
