--- a/SusGame/index.html
+++ b/SusGame/index.html
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | SquidGame</title>
+    <title>Unity WebGL Player | susgame</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
