--- a/SusGame/index.html
+++ b/SusGame/index.html
@@ -36,7 +36,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">SquidGame</div>
+        <div id="unity-build-title">susgame</div>
       </div>
     </div>
     <script>
