--- a/SusGame/index.html
+++ b/SusGame/index.html
@@ -16,13 +16,14 @@
   <body>
     <header>
       <nav>
-        <ul class="topnav">
-          <li class="logo"><a href="https://..."></a></li>
-          <li><a href="https://...">HOME</a></li>
-          <li><a href="https://...">GAMES</a></li>
-          <li><a href="https://...">CONTACT</a></li>
-        </ul>
-      </nav>
+                <ul class="topnav">
+                    <li class="logo"><a href="https://conghieuz.github.io/HieuWebGame/"></a></li>
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/">HOME</a></li>
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Games/Games.htm">GAMES</a></li>
+                    <!-- <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Arts/Arts.htm">ARTS</a></li> -->
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Contact/Contact.htm">CONTACT</a></li>
+                </ul>
+            </nav>
     </header>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
