--- a/WebGLController/index.html
+++ b/WebGLController/index.html
@@ -20,16 +20,16 @@
   </head>
   <body>
     <header>
-      <nav>
-          <ul class="topnav">
-              <li class="logo"><a href="https://conghieuz.github.io/ConghieuZ/"></a></li>
-              <li><a href="https://conghieuz.github.io/ConghieuZ/">HOME</a></li>
-              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Games/Games.htm">GAMES</a></li>
-            
-              <li><a href="https://conghieuz.github.io/ConghieuZ/Pages/Contact/Contact.htm">CONTACT</a></li>
-          </ul>
-      </nav>
-  </header>
+            <nav>
+                <ul class="topnav">
+                    <li class="logo"><a href="https://conghieuz.github.io/HieuWebGame/"></a></li>
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/">HOME</a></li>
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Games/Games.htm">GAMES</a></li>
+                    <!-- <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Arts/Arts.htm">ARTS</a></li> -->
+                    <li><a href="https://conghieuz.github.io/HieuWebGame/Pages/Contact/Contact.htm">CONTACT</a></li>
+                </ul>
+            </nav>
+        </header>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
